Removed PayloadDto.
